# GEMS

./: ChangeLog  Makefile.am  TODO  configure.ac  configure.in  gems.spec.in  lice
common/: Makefile.am  ll-block.c  ll.c  message.c  regex.c  rules.c  sckt.c  spoolread.c  stringinate.c
db/: Makefile.am
db/MySQL/: Makefile.am  db.mysql.c
db/PostGreSQL/: Makefile.am  db.pgsql.c
db/sqlite/: Makefile.am  db.sqlite.c
doc/: BUGS  Makefile.am  TODO  doxygen.conf.in  dump  header_fields  mkdb  mktbls  notes  proposal  root_mail  specs  tables
face/: Makefile.am
face/GNOME/: Makefile.am  gems.glade
face/GNOME/a/: Makefile.am  main.cc  ui.cc  ui.hh
face/GNOME/e/: Makefile  Makefile.am  callbacks.c  callbacks.h  gems.glade  interface.c  interface.h  main.c  support.c  support.h
face/GNOME/o/: Makefile.am  callbacks.c  callbacks.h  extra.c  extra.h  gems.glade  interface.c  interface.h  main.c  support.c  support.h
face/GNOME/xf/: Makefile.am  callbacks.c  callbacks.h  gems.glade  interface.c  interface.h  main.c  support.c  support.h
face/GNOME2/: Makefile.am
face/GNOME2/o/: Makefile.am  callbacks.c  callbacks.h  extra.c  extra.h  gems.glade  gems.gladep  interface.c  interface.h  main.c
face/GTK/: Makefile.am  endmakefile.am
face/GTK/e/: Makefile.am  bmail.glade  callbacks.c  callbacks.h  interface.c  interface.h  main.c  oldbmail.glade  support.c  support.h
face/curses/: Makefile.am
face/curses/CURSES_p/: Makefile.am  compose.c  main.c
face/macosX/gems/: gems_Prefix.pch  main.m
face/macosX/gems/English.lproj/: MainMenu.xib
face/macosX/gems/gems.xcodeproj/: erik.mode1v3  erik.pbxuser  project.pbxproj
face/utils/: Makefile.am  check.c  cleantables.c  cull.c  dump.c  initdb.c  newspool  normalize.c  pop3check.c  put.c  showmail.c  snarf.c  spool2sql.c  spool2sqlfast.c  sql2spool.c  synhash.c  test.c
include/: Makefile.am  db.h  defs.h  face.h  ll.h  message.h  receptor.h  rules.h  sckt.h  spoolread.h  stringinate.h  transmitter.h
intl/: bindtextdom.c  cat-compat.c  dcgettext.c  dgettext.c  explodename.c  finddomain.c  gettext.c  gettext.h  gettextP.h  hash-string.h  intl-compat.c  l10nflist.c  libgettext.h  loadinfo.h  loadmsgcat.c  localealias.c  textdomain.c
m4/: ax_lib_sqlite3.m4
po/: POTFILES.in  bmail.pot  cat-id-tbl.c  gems.pot
receptor/: Makefile.am  imap4.c  pop1.c  pop2.c  pop3.c  spool.c
shell/: Makefile.am  parms.c  parms.h  prefs.c  prefs.h  shell.c
transmitter/: Makefile.am  sendmail.c  smtp.c  transmitter.c
